# amethyst

./: .gitlab-ci.yml  Cargo.toml  README.md
i18n/ar/: Amethyst.ftl
i18n/de/: Amethyst.ftl
i18n/en/: Amethyst.ftl
i18n/es/: Amethyst.ftl
i18n/pt_BR/: Amethyst.ftl
i18n/ru/: Amethyst.ftl
i18n/sv/: Amethyst.ftl
i18n/uk/: Amethyst.ftl
src/: args.rs  error.rs  main.rs
src/builder/: git.rs  makepkg.rs  paccache.rs  pacdiff.rs  pacman.rs  pager.rs  rm.rs
src/interact/: multi_select.rs  paging.rs  theme.rs
src/internal/: alpm.rs  commands.rs  config.rs  dependencies.rs  mod.rs  rpc.rs  sort.rs  sudoloop.rs  utils.rs
src/logging/: fmt_builder.rs  piped_stdio.rs
src/operations/: clean.rs  search.rs  upgrade.rs
src/operations/aur_install/: aur_dependency_installation.rs  aur_download.rs  aur_fetch.rs  aur_package_install.rs  aur_review.rs  common.rs  make_dependency_removal.rs  mod.rs  repo_dependency_installation.rs
