[package]
name = "Amethyst"
version = "4.1.0"
authors = ["Michal S. <michal@tar.black>", "axtlos <axtlos@tar.black>", "trivernis <trivernis@protonmail.com>", "Fries <fries@tar.black>"]
description = "A fast and efficient AUR helper"
repository = "https://github.com/crystal-linux/amethyst"

license-file = "LICENSE"
keywords = ["aur", "crystal-linux", "pacman", "aur-helper"]
categories = ["command-line-utilities"]
default-run = "ame"
edition = "2021"

[package.metadata]
codename = "Disco Duck"

[[bin]]
name = "ame"
path = "src/main.rs"

[profile.release]
incremental = true
debug = false
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0

[dependencies]
minus = { version = "5.0.5", features = ["search", "static_output"] }
alpm = "5.0.0"
alpm-utils = "5.0.0"
pacmanconf = "3.0.0"
chrono = { version = "0.4.22", default-features = false, features = [ "clock", "std", "wasmbind" ] }
trigram = "0.4.4"
clap = { version = "4.0.19", features = [ "derive", "wrap_help" ] }
regex = { version = "1.7.0", default-features = false, features = [ "std", "unicode-perl" ] }
colored = "2.0.0"
serde = { version = "1.0.147", default-features = false, features = [ "derive", "serde_derive" ] }
native-tls = { version = "0.2.10", default-features = false }
libc = { version = "0.2.137", default-features = false }
aur-rpc = { version = "0.2.2", default-features = false, features = ["rustls-tls"] }
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
textwrap = "0.16.0"
crossterm = "0.25.0"
toml = "0.5.9"
clap_complete = "4.0.3"
clap_complete_fig = "4.0.1"
color-eyre = { version = "0.6.2", features = ["issue-url", "url"] }
indicatif = { version = "0.17.1", features = ["tokio"] }
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
lazy-regex = "2.3.1"

directories = "4.0.1"
console = "0.15.2"
tracing-error = "0.2.0"
fuzzy-matcher = "0.3.7"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
thiserror = "1.0.37"
rust-embed = "6.4.2"

[dependencies.config]
version = "0.13.2"
features = ["toml"]

[dependencies.tokio]
version = "1.21.0"
features = ["process", "macros", "rt-multi-thread", "tracing"]

[build-dependencies]
cargo_toml = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
